--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>11</java.version>
-		<start-class>nisum.users.JwtAuthServiceApp</start-class>
+		<start-class>com.nisum.users.ServiceApplication</start-class>
 	</properties>
 
 	<parent>
